<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_imc" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:hint="@string/Weight"
        android:inputType="numberDecimal"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/text_weight"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/text_height"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blurple"
        android:text="@string/button_calculate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/imc_result"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_result_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/imc_text_result"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>